--- a/coverage_report/html/index.html
+++ b/coverage_report/html/index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="content">
         <h1>Coverage report:
-            <span class="pc_cov">100%</span>
+            <span class="pc_cov">39%</span>
         </h1>
         <aside id="help_panel_wrapper">
             <input id="help_panel_state" type="checkbox">
@@ -45,7 +45,7 @@
         </form>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.2.7">coverage.py v7.2.7</a>,
-            created at 2023-06-26 08:59 -0300
+            created at 2023-06-27 09:57 -0300
         </p>
     </div>
 </header>
@@ -68,14 +68,21 @@
                 <td>4</td>
                 <td class="right" data-ratio="8 8">100%</td>
             </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_72b8cd0f89d459af___init___py.html">incolume/py/mailing/scripts/__init__.py</a></td>
+                <td>23</td>
+                <td>19</td>
+                <td>1</td>
+                <td class="right" data-ratio="4 23">17%</td>
+            </tr>
         </tbody>
         <tfoot>
             <tr class="total">
                 <td class="name left">Total</td>
-                <td>8</td>
-                <td>0</td>
-                <td>4</td>
-                <td class="right" data-ratio="8 8">100%</td>
+                <td>31</td>
+                <td>19</td>
+                <td>5</td>
+                <td class="right" data-ratio="12 31">39%</td>
             </tr>
         </tfoot>
     </table>
@@ -87,11 +94,11 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.2.7">coverage.py v7.2.7</a>,
-            created at 2023-06-26 08:59 -0300
+            created at 2023-06-27 09:57 -0300
         </p>
     </div>
     <aside class="hidden">
-        <a id="prevFileLink" class="nav" href="d_871b23b52d68d76f___init___py.html"/>
+        <a id="prevFileLink" class="nav" href="d_72b8cd0f89d459af___init___py.html"/>
         <a id="nextFileLink" class="nav" href="d_871b23b52d68d76f___init___py.html"/>
         <button type="button" class="button_prev_file" data-shortcut="["/>
         <button type="button" class="button_next_file" data-shortcut="]"/>
