--- a/coverage_report/html/index.html
+++ b/coverage_report/html/index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="content">
         <h1>Coverage report:
-            <span class="pc_cov">39%</span>
+            <span class="pc_cov">18%</span>
         </h1>
         <aside id="help_panel_wrapper">
             <input id="help_panel_state" type="checkbox">
@@ -45,7 +45,7 @@
         </form>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.2.7">coverage.py v7.2.7</a>,
-            created at 2023-06-27 09:57 -0300
+            created at 2023-06-27 15:47 -0300
         </p>
     </div>
 </header>
@@ -62,6 +62,20 @@
         </thead>
         <tbody>
             <tr class="file">
+                <td class="name left"><a href="d_eb340b387ad34fb2___init___py.html">incolume/__init__.py</a></td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="0 0">100%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_18b18ae8588f2b69___init___py.html">incolume/py/__init__.py</a></td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="0 0">100%</td>
+            </tr>
+            <tr class="file">
                 <td class="name left"><a href="d_871b23b52d68d76f___init___py.html">incolume/py/mailing/__init__.py</a></td>
                 <td>8</td>
                 <td>0</td>
@@ -75,14 +89,35 @@
                 <td>1</td>
                 <td class="right" data-ratio="4 23">17%</td>
             </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_871b23b52d68d76f_sendmail_py.html">incolume/py/mailing/sendmail.py</a></td>
+                <td>21</td>
+                <td>21</td>
+                <td>1</td>
+                <td class="right" data-ratio="0 21">0%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_2b2d667c1345292b___init___py.html">incolume/py/mailing/utils/__init__.py</a></td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="0 0">100%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="d_2b2d667c1345292b_scrap_emails_py.html">incolume/py/mailing/utils/scrap_emails.py</a></td>
+                <td>15</td>
+                <td>15</td>
+                <td>8</td>
+                <td class="right" data-ratio="0 15">0%</td>
+            </tr>
         </tbody>
         <tfoot>
             <tr class="total">
                 <td class="name left">Total</td>
-                <td>31</td>
-                <td>19</td>
-                <td>5</td>
-                <td class="right" data-ratio="12 31">39%</td>
+                <td>67</td>
+                <td>55</td>
+                <td>14</td>
+                <td class="right" data-ratio="12 67">18%</td>
             </tr>
         </tfoot>
     </table>
@@ -94,12 +129,12 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.2.7">coverage.py v7.2.7</a>,
-            created at 2023-06-27 09:57 -0300
+            created at 2023-06-27 15:47 -0300
         </p>
     </div>
     <aside class="hidden">
-        <a id="prevFileLink" class="nav" href="d_72b8cd0f89d459af___init___py.html"/>
-        <a id="nextFileLink" class="nav" href="d_871b23b52d68d76f___init___py.html"/>
+        <a id="prevFileLink" class="nav" href="d_2b2d667c1345292b_scrap_emails_py.html"/>
+        <a id="nextFileLink" class="nav" href="d_eb340b387ad34fb2___init___py.html"/>
         <button type="button" class="button_prev_file" data-shortcut="["/>
         <button type="button" class="button_next_file" data-shortcut="]"/>
         <button type="button" class="button_show_hide_help" data-shortcut="?"/>
